--- a/typo3conf/ext/armtemplate/Resources/Public/css/style.css
+++ b/typo3conf/ext/armtemplate/Resources/Public/css/style.css
@@ -14,7 +14,7 @@ body {
   -webkit-text-size-adjust: 100%;
   -ms-text-size-adjust: 100%;
   color: #343434;
-  background-color: #e6e6e6;
+  background-color: #e3e3e3;
   font-size: 13px;
   font-weight: 400;
   line-height: 24px;
@@ -42,17 +42,17 @@ a:hover, a:focus {
 header {height: 50px;}
 
 /**colors**/
-.red {color: #982437!important;}
+.red {color: #a93044!important;}
 .green {color: #297e47!important;}
-.blue {color: #3c5691!important;}
+.blue {color: #4463a9!important;}
 .yellow {color: #d4ab2b!important;}
 .white{color: #fff;}
 .grey {color: #e6e6e6;}
 .darkgrey {color: #323232;}
 
-.redbg {background-color: #982437 !important;}
+.redbg {background-color: #a93044 !important;}
 .greenbg {background-color: #297e47 !important;}
-.bluebg {background-color: #3c5691 !important;}
+.bluebg {background-color: #4463a9 !important;}
 .yellowbg {background-color: #d4ab2b !important;}
 .whitebg {background-color: #fff !important;}
 .blackbg {background-color: #000 !important;}
@@ -66,14 +66,14 @@ header {height: 50px;}
 .header-nav h3{font-family:montserrat-semibold,sans-serif;font-size:11px;line-height:1.5;text-transform:uppercase;letter-spacing:.25rem;margin-bottom:4.8rem;margin-top:.9rem;color:#39b54a}
 .header-nav p{margin-bottom:2.7rem}
 .header-nav__content{position:relative;left:50px;opacity:0;visibility:hidden}
-.header-nav__list{font-family: 'Pragati Narrow',sans-serif;font-size:1.8rem;margin:3.6rem 0 3rem;padding:0 0 1.8rem;list-style:none}
+.header-nav__list{font-family: 'Pragati Narrow',sans-serif;font-size:2.25rem;margin:3.6rem 0 3rem;padding:0 0 1.8rem;list-style:none}
 .header-nav__list li{padding-left:0;line-height:4.5rem}
 
 .header-nav__list a,.header-nav__list a:visited{color:#fff}
 .header-nav__list li:nth-child(2) a {color: #2a7e4c;} 
 .header-nav__list li:nth-child(3) a {color: #98243b;} 
 .header-nav__list li:nth-child(4) a {color: #cfac2a;} 
-.header-nav__list li:nth-child(5) a {color: #3c5691;} 
+.header-nav__list li:nth-child(5) a {color: #4463a9;} 
 
 .header-nav__social{list-style:none;display:inline-block;margin:0;font-size:1.8rem}
 .header-nav__social li{margin-right:12px;padding-left:0;display:inline-block}
@@ -95,7 +95,7 @@ header {height: 50px;}
 .header-menu-icon::before,.header-menu-icon::after{content:'';width:100%;height:100%;background-color:inherit;position:absolute;left:0;-webkit-transition:all .5s ease-in-out;transition:all .5s ease-in-out}
 .header-menu-icon::before{top:-9px}
 .header-menu-icon::after{bottom:-9px}
-.header-text {position:absolute;left:38px;top:24px;height:42px;width:80%;line-height:42px;font-size:1.8rem; font-family: 'Pragati Narrow'}
+.header-text {position:absolute;left:38px;top:24px;height:42px;width:80%;line-height:42px;font-size:2.25rem; font-family: 'Pragati Narrow'}
 .header-video {text-align: center;}
 .header-video video {width: 75%; height: auto;}
 .colormenu {list-style: none; float: right; padding-right: 30px; background: #e6e6e6; font-family: 'Pragati Narrow'}
@@ -105,7 +105,7 @@ header {height: 50px;}
 .colormenu li:nth-child(2) a {color: #2a7e4c;}
 .colormenu li:nth-child(3) a {color: #98243b;}
 .colormenu li:nth-child(4) a {color: #cfac2a;}
-.colormenu li:nth-child(5) a {color: #3c5691;}
+.colormenu li:nth-child(5) a {color: #4463a9;}
 .scrollv {position: fixed; display: none; z-index: 100; right: 0; width: 98%}
 .imgblk {display: table; width: 100%;}
 .imgblk h1 {margin-top: 20px}
