[C] Pastell colors adjusted

--- a/typo3conf/ext/armtemplate/Resources/Private/Partials/ContentElements/Header/Header.html
+++ b/typo3conf/ext/armtemplate/Resources/Private/Partials/ContentElements/Header/Header.html
@@ -120,42 +120,42 @@
             </h2>
         </f:case>
          <f:case value="117">
-            <h1 class="pastell1 {positionClass}">
+            <h1 class="redbright {positionClass}">
                 <f:link.typolink parameter="{link}">{header}</f:link.typolink>
             </h1>
         </f:case>
         <f:case value="118">
-            <h2 class="pastell1 {positionClass}">
+            <h2 class="redbright {positionClass}">
                 <f:link.typolink parameter="{link}">{header}</f:link.typolink>
             </h2>
         </f:case>
         <f:case value="119">
-            <h1 class="pastell2 {positionClass}">
+            <h1 class="greenbright {positionClass}">
                 <f:link.typolink parameter="{link}">{header}</f:link.typolink>
             </h1>
         </f:case>
         <f:case value="120">
-            <h2 class="pastell2 {positionClass}">
+            <h2 class="greenbright {positionClass}">
                 <f:link.typolink parameter="{link}">{header}</f:link.typolink>
             </h2>
         </f:case>
         <f:case value="121">
-            <h1 class="pastell3 {positionClass}">
+            <h1 class="bluebright {positionClass}">
                 <f:link.typolink parameter="{link}">{header}</f:link.typolink>
             </h1>
         </f:case>
         <f:case value="122">
-            <h2 class="pastell3 {positionClass}">
+            <h2 class="bluebright {positionClass}">
                 <f:link.typolink parameter="{link}">{header}</f:link.typolink>
             </h2>
         </f:case>
         <f:case value="123">
-            <h1 class="pastell4 {positionClass}">
+            <h1 class="yellowbright {positionClass}">
                 <f:link.typolink parameter="{link}">{header}</f:link.typolink>
             </h1>
         </f:case>
         <f:case value="124">
-            <h2 class="pastell4 {positionClass}">
+            <h2 class="yellowbright {positionClass}">
                 <f:link.typolink parameter="{link}">{header}</f:link.typolink>
             </h2>
         </f:case>
