[C] Internal scroll element added

--- a/typo3conf/ext/armtemplate/Resources/Private/Templates/GridElements/overlap.html
+++ b/typo3conf/ext/armtemplate/Resources/Private/Templates/GridElements/overlap.html
@@ -1,19 +1,20 @@
 
-<f:if condition="{data.space_before_class}">
-    <div class="frame-space-before-{data.space_before_class}"></div>
-</f:if>
 <section class="overlap {data.flexform_field_hpos}">
     <h3 class="overlap-title {data.flexform_field_color}">
-        {data.flexform_field_heading}
+        <f:if condition="{data.flexform_field_link}">
+            <f:then>
+                <f:link.page pageUid="{data.flexform_field_link}">{data.flexform_field_heading}</f:link.page>
+            </f:then>
+            <f:else>
+                {data.flexform_field_heading}
+            </f:else>
+        </f:if>
         <span class="overlap-border {data.flexform_field_ulinebgcolor}"></span>
     </h3>
-    <div class="overlap-content {data.flexform_field_mainbgcolor}">
+    <div class="overlap-content {data.flexform_field_mainbgcolor}" style="height: {data.flexform_field_baseheight}px">
         <f:format.raw>{data.tx_gridelements_view_column_10}</f:format.raw>
     </div>
-    <div class="overlap-content-below {data.flexform_field_stbgcolor}">
+    <div class="overlap-content-below {data.flexform_field_stbgcolor}" style="height: {data.flexform_field_bottomheight}px">
         <f:format.raw>{data.tx_gridelements_view_column_20}</f:format.raw>
     </div>
 </section>
-<f:if condition="{data.space_after_class}">
-    <div class="frame-space-after-{data.space_after_class}"></div>
-</f:if>
