--- a/typo3conf/ext/armtemplate/Resources/Private/Partials/ContentElements/Header/Header.html
+++ b/typo3conf/ext/armtemplate/Resources/Private/Partials/ContentElements/Header/Header.html
@@ -159,6 +159,117 @@
                 <f:link.typolink parameter="{link}">{header}</f:link.typolink>
             </h2>
         </f:case>
+        
+        <f:case value="125">
+            <h3 class="white {positionClass}">
+                <f:link.typolink parameter="{link}">{header}</f:link.typolink>
+            </h3>
+        </f:case>
+        <f:case value="126">
+            <h4 class="white {positionClass}">
+                <f:link.typolink parameter="{link}">{header}</f:link.typolink>
+            </h4>
+        </f:case>
+        <f:case value="127">
+            <h3 class="grey {positionClass}">
+                <f:link.typolink parameter="{link}">{header}</f:link.typolink>
+            </h3>
+        </f:case>
+        <f:case value="128">
+            <h4 class="grey {positionClass}">
+                <f:link.typolink parameter="{link}">{header}</f:link.typolink>
+            </h4>
+        </f:case>
+        <f:case value="129">
+            <h3 class="anthracite {positionClass}">
+                <f:link.typolink parameter="{link}">{header}</f:link.typolink>
+            </h3>
+        </f:case>
+        <f:case value="130">
+            <h4 class="anthracite {positionClass}">
+                <f:link.typolink parameter="{link}">{header}</f:link.typolink>
+            </h4>
+        </f:case>
+         <f:case value="131">
+            <h3 class="yellow {positionClass}">
+                <f:link.typolink parameter="{link}">{header}</f:link.typolink>
+            </h3>
+        </f:case>
+        <f:case value="132">
+            <h4 class="yellow {positionClass}">
+                <f:link.typolink parameter="{link}">{header}</f:link.typolink>
+            </h4>
+        </f:case>
+         <f:case value="133">
+            <h3 class="green {positionClass}">
+                <f:link.typolink parameter="{link}">{header}</f:link.typolink>
+            </h3>
+        </f:case>
+        <f:case value="134">
+            <h4 class="green {positionClass}">
+                <f:link.typolink parameter="{link}">{header}</f:link.typolink>
+            </h4>
+        </f:case>
+         <f:case value="135">
+            <h3 class="blue {positionClass}">
+                <f:link.typolink parameter="{link}">{header}</f:link.typolink>
+            </h3>
+        </f:case>
+        <f:case value="136">
+            <h4 class="blue {positionClass}">
+                <f:link.typolink parameter="{link}">{header}</f:link.typolink>
+            </h4>
+        </f:case>
+         <f:case value="137">
+            <h3 class="red {positionClass}">
+                <f:link.typolink parameter="{link}">{header}</f:link.typolink>
+            </h3>
+        </f:case>
+        <f:case value="138">
+            <h4 class="red {positionClass}">
+                <f:link.typolink parameter="{link}">{header}</f:link.typolink>
+            </h4>
+        </f:case>
+         <f:case value="139">
+            <h3 class="redbright {positionClass}">
+                <f:link.typolink parameter="{link}">{header}</f:link.typolink>
+            </h3>
+        </f:case>
+        <f:case value="140">
+            <h4 class="redbright {positionClass}">
+                <f:link.typolink parameter="{link}">{header}</f:link.typolink>
+            </h4>
+        </f:case>
+        <f:case value="141">
+            <h3 class="greenbright {positionClass}">
+                <f:link.typolink parameter="{link}">{header}</f:link.typolink>
+            </h3>
+        </f:case>
+        <f:case value="142">
+            <h4 class="greenbright {positionClass}">
+                <f:link.typolink parameter="{link}">{header}</f:link.typolink>
+            </h4>
+        </f:case>
+        <f:case value="143">
+            <h3 class="bluebright {positionClass}">
+                <f:link.typolink parameter="{link}">{header}</f:link.typolink>
+            </h3>
+        </f:case>
+        <f:case value="144">
+            <h4 class="bluebright {positionClass}">
+                <f:link.typolink parameter="{link}">{header}</f:link.typolink>
+            </h4>
+        </f:case>
+        <f:case value="145">
+            <h3 class="yellowbright {positionClass}">
+                <f:link.typolink parameter="{link}">{header}</f:link.typolink>
+            </h3>
+        </f:case>
+        <f:case value="146">
+            <h4 class="yellowbright {positionClass}">
+                <f:link.typolink parameter="{link}">{header}</f:link.typolink>
+            </h4>
+        </f:case>
         <f:defaultCase>
             <f:if condition="{default}">
                 <f:render partial="Header/Header" arguments="{
