--- a/typo3conf/ext/armtemplate/Resources/Private/Partials/ContentElements/Header/SubHeader.html
+++ b/typo3conf/ext/armtemplate/Resources/Private/Partials/ContentElements/Header/SubHeader.html
@@ -31,6 +31,116 @@
                 <span><f:format.htmlentitiesDecode>{subheader}</f:format.htmlentitiesDecode></span>
             </h6>
         </f:case>
+        <f:case value="103">
+            <h2 class="white {positionClass}">
+                <span><f:format.htmlentitiesDecode>{subheader}</f:format.htmlentitiesDecode></span>
+            </h2>
+        </f:case>
+        <f:case value="104">
+            <h3 class="white {positionClass}">
+                 <span><f:format.htmlentitiesDecode>{subheader}</f:format.htmlentitiesDecode></span>
+            </h3>
+        </f:case>
+        <f:case value="105">
+            <h2 class="grey {positionClass}">
+                <span><f:format.htmlentitiesDecode>{subheader}</f:format.htmlentitiesDecode></span>
+            </h2>
+        </f:case>
+        <f:case value="106">
+            <h3 class="grey {positionClass}">
+                 <span><f:format.htmlentitiesDecode>{subheader}</f:format.htmlentitiesDecode></span>
+            </h3>
+        </f:case>
+        <f:case value="107">
+            <h2 class="anthracite {positionClass}">
+                 <span><f:format.htmlentitiesDecode>{subheader}</f:format.htmlentitiesDecode></span>
+            </h2>
+        </f:case>
+        <f:case value="108">
+            <h3 class="anthracite {positionClass}">
+                 <span><f:format.htmlentitiesDecode>{subheader}</f:format.htmlentitiesDecode></span>
+            </h3>
+        </f:case>
+         <f:case value="109">
+            <h2 class="yellow {positionClass}">
+                <span><f:format.htmlentitiesDecode>{subheader}</f:format.htmlentitiesDecode></span>
+            </h2>
+        </f:case>
+        <f:case value="110">
+            <h3 class="yellow {positionClass}">
+                 <span><f:format.htmlentitiesDecode>{subheader}</f:format.htmlentitiesDecode></span>
+            </h3>
+        </f:case>
+         <f:case value="111">
+            <h2 class="green {positionClass}">
+                 <span><f:format.htmlentitiesDecode>{subheader}</f:format.htmlentitiesDecode></span>
+            </h2>
+        </f:case>
+        <f:case value="112">
+            <h3 class="green {positionClass}">
+                 <span><f:format.htmlentitiesDecode>{subheader}</f:format.htmlentitiesDecode></span>
+            </h3>
+        </f:case>
+         <f:case value="113">
+            <h2 class="blue {positionClass}">
+                 <span><f:format.htmlentitiesDecode>{subheader}</f:format.htmlentitiesDecode></span>
+            </h2>
+        </f:case>
+        <f:case value="114">
+            <h3 class="blue {positionClass}">
+                 <span><f:format.htmlentitiesDecode>{subheader}</f:format.htmlentitiesDecode></span>
+            </h3>
+        </f:case>
+         <f:case value="115">
+            <h2 class="red {positionClass}">
+                 <span><f:format.htmlentitiesDecode>{subheader}</f:format.htmlentitiesDecode></span>
+            </h2>
+        </f:case>
+        <f:case value="116">
+            <h3 class="red {positionClass}">
+                <span><f:format.htmlentitiesDecode>{subheader}</f:format.htmlentitiesDecode></span>
+            </h3>
+        </f:case>
+         <f:case value="117">
+            <h2 class="redbright {positionClass}">
+                 <span><f:format.htmlentitiesDecode>{subheader}</f:format.htmlentitiesDecode></span>
+            </h2>
+        </f:case>
+        <f:case value="118">
+            <h3 class="redbright {positionClass}">
+                 <span><f:format.htmlentitiesDecode>{subheader}</f:format.htmlentitiesDecode></span>
+            </h3>
+        </f:case>
+        <f:case value="119">
+            <h2 class="greenbright {positionClass}">
+                 <span><f:format.htmlentitiesDecode>{subheader}</f:format.htmlentitiesDecode></span>
+            </h2>
+        </f:case>
+        <f:case value="120">
+            <h3 class="greenbright {positionClass}">
+                 <span><f:format.htmlentitiesDecode>{subheader}</f:format.htmlentitiesDecode></span>
+            </h3>
+        </f:case>
+        <f:case value="121">
+            <h2 class="bluebright {positionClass}">
+                 <span><f:format.htmlentitiesDecode>{subheader}</f:format.htmlentitiesDecode></span>
+            </h2>
+        </f:case>
+        <f:case value="122">
+            <h3 class="bluebright {positionClass}">
+                 <span><f:format.htmlentitiesDecode>{subheader}</f:format.htmlentitiesDecode></span>
+            </h3>
+        </f:case>
+        <f:case value="123">
+            <h2 class="yellowbright {positionClass}">
+                 <span><f:format.htmlentitiesDecode>{subheader}</f:format.htmlentitiesDecode></span>
+            </h2>
+        </f:case>
+        <f:case value="124">
+            <h3 class="yellowbright {positionClass}">
+                 <span><f:format.htmlentitiesDecode>{subheader}</f:format.htmlentitiesDecode></span>
+            </h3>
+        </f:case>
         <f:defaultCase>
             <f:if condition="{default}">
                 <f:render partial="Header/SubHeader" arguments="{
