[C] PDF invoices changes

--- a/typo3conf/ext/armpackage/Resources/Private/Templates/Email/Stripe.html
+++ b/typo3conf/ext/armpackage/Resources/Private/Templates/Email/Stripe.html
@@ -15,11 +15,11 @@ Der Zahlungsvorgang mit Kreditkarte war nicht erfolgreich.
 
 <h2>Zahlung</h2>
 <p>Rechnungsnummer: {orderid}<br>
-Betrag: {currency} {total}<br>
+Total: {currency} {total}<br>
 Datum: {pdate}<br>
 Zahlungsstatus: {pstatus}<br>
 Package: {package}<br>
-Rate: {rate}<br>
+Betrag: {currency} {rate}<br>
 Anzahl Verkaufshäuser: {qty}<br>
 VAT: {vat}<br>
 Rebatt: {discount}<br>
