[C] Change in invoice text

--- a/typo3conf/ext/armpackage/Resources/Private/Templates/Email/Stripe.html
+++ b/typo3conf/ext/armpackage/Resources/Private/Templates/Email/Stripe.html
@@ -18,13 +18,14 @@ Der Zahlungsvorgang mit Kreditkarte war nicht erfolgreich.
 Total: {currency} {total}<br>
 Datum: {pdate}<br>
 Zahlungsstatus: {pstatus}<br>
-Package: {package}<br>
+Abonnement: {package}<br>
 Betrag: {currency} {rate}<br>
 Anzahl Verkaufshäuser: {qty}<br>
-VAT: {vat}<br>
-Rebatt: {discount}<br>
+MwSt.: {vat}<br>
+Rabatt: {discount}<br>
 </p>
 <p><br>
-Freundliche Gr&uuml;sse,<br>
-Marktmacher
+Mit nettem Gruss,<br>
+Marcel Kuriger<br>
+<a href="https://www.marktmacher.com">marktmacher.com</a>
 </p>
