--- a/typo3conf/ext/armtemplate/Resources/Private/Partials/Femanager/Fields/Terms.html
+++ b/typo3conf/ext/armtemplate/Resources/Private/Partials/Femanager/Fields/Terms.html
@@ -12,9 +12,8 @@
                     <span>*</span>
                 </f:if>
                 <f:if condition="{settings.misc.termsUrl}">
-                    <f:then><br>
-                        (<f:link.page pageUid="{settings.misc.termsUrl}"><f:translate key="tx_femanager_domain_model_user.termslinktext" /></f:link.page>)
-                    </f:then>
+                    <br>
+                    (<f:link.page pageUid="{settings.misc.termsUrl}"><f:translate key="tx_femanager_domain_model_user.termslinktext" /></f:link.page> / <f:link.page pageUid="{settings.misc.link2}">Datenschutzerklärung</f:link.page>)
                 </f:if>
     </label>
 </div>
