--- a/typo3conf/ext/armpackage/Resources/Private/Templates/Package/Login.html
+++ b/typo3conf/ext/armpackage/Resources/Private/Templates/Package/Login.html
@@ -5,12 +5,12 @@
         <br>
         <div class="col-xs-8 col-xs-offset-2">
             <div class="page-login-form box">                
-                <h3>Student Login</h3>
+                <h4>Login Studenten</h4>
                 <f:form class="login-form felogin" action="login" method="post">
                     <div class="form-group">
                         <div class="input-icon">
                             <i class="icon fa fa-user"></i>
-                            <f:form.textfield id="puser" name="puser" class="form-control" placeholder="Benutzername" />
+                            <f:form.textfield id="puser" name="puser" class="form-control" placeholder="Benutzernamen Ihres Unternehmens" />
                         </div>
                     </div>
                     <div class="form-group">
