--- a/typo3conf/ext/armpackage/Resources/Private/Templates/Package/Register.html
+++ b/typo3conf/ext/armpackage/Resources/Private/Templates/Package/Register.html
@@ -2,37 +2,38 @@
 <div class="tx_armpackage">
     <div class="container">
         <div class="row">
-            <div class="col-sm-8 col-sm-offset-2 col-md-6 col-md-offset-3">
+            <div class="col-sm-9 col-sm-offset-1 col-md-7 col-md-offset-2">
                 <f:flashMessages />
                 <div id="buyprocess"></div>
                 <br>
                 <f:form class="form-horizontal" action="confirm" method="post">
                     <div class="form-group row">
-                        <label class="col-sm-5 control-label">Package Preis / <f:translate key="tx_armpackage_domain_model_package.month" /> ({settings.currency})</label>
+                        <label class="col-sm-5 control-label">Preis für Abonnement / <f:translate key="tx_armpackage_domain_model_package.month" /> Euro</label>
                         <div class="controls col-sm-7">
-                            <f:form.textfield id="rate" name="rate" class="form-control" value="{package.rate}" readonly="1" />
+                            <f:form.textfield id="rate" name="rate" class="form-control" value="{package.rate->f:format.number(decimals:2,decimalSeparator:',',thousandsSeparator:'.')}" readonly="1" />
                         </div>
                     </div>
                     <div class="form-group row">
-                        <label class="col-sm-5 control-label">Subskription für 1 <f:translate key="tx_armpackage_domain_model_package.month" /> * Verkaufshäuser</label>
+                        <label class="col-sm-5 control-label">Anzahl Standorte *</label>
                         <div class="controls col-sm-7">
                             <f:form.textfield type="number" id="packqty" name="qty" class="form-control" value="{qty}" />
+                            <div class="pknote">bitte geben Sie hier die Anzahl Verkaufs-standorte an, in denen Furnplan Installert ist.</div>
                         </div>
                     </div>
                      <div class="form-group row">
-                        <label class="col-sm-5 control-label">Amount ({settings.currency})</label>
+                        <label class="col-sm-5 control-label">Betrag Euro</label>
                         <div class="controls col-sm-7">
                             <f:form.textfield id="amount" name="amount" readonly="1" class="form-control" value="{amount}" />
                         </div>
                     </div>
                      <div class="form-group row">
-                        <label class="col-sm-5 control-label">Discount ({settings.currency})</label>
+                        <label class="col-sm-5 control-label">Rabatt* Euro</label>
                         <div class="controls col-sm-7">
                             <f:form.textfield id="discount" name="discount" readonly="1" class="form-control" value="{discount}" />
                         </div>
                     </div>
                     <div class="form-group row">
-                        <label class="col-sm-5 control-label">Total ({settings.currency})</label>
+                        <label class="col-sm-5 control-label">Total Euro</label>
                         <div class="controls col-sm-7">
                             <f:form.textfield id="total" name="total" readonly="1" class="form-control" value="{total}" />
                         </div>
@@ -54,13 +55,13 @@
                     <div class="form-group row">
                         <div class="col-sm-offset-5 controls col-sm-7">
                             <f:if condition="{package.rebate2}">
-                                bei 2 Standorten {package.rebate2}% Rabatt: {settings.currency} <arm:discount discount="{package.rebate2}" rate="{package.rate}" /><br>
+                                bei 2 Standorten {package.rebate2}% Rabatt: Euro <arm:discount discount="{package.rebate2}" rate="{package.rate}" /><br>
                             </f:if>
                             <f:if condition="{package.rebate3to10}">
-                                bei 3 bis 10 {package.rebate3to10}% Rabatt: {settings.currency} <arm:discount discount="{package.rebate3to10}" rate="{package.rate}" /><br>
+                                bei 3 bis 10 Standorten {package.rebate3to10}% Rabatt: Euro <arm:discount discount="{package.rebate3to10}" rate="{package.rate}" /><br>
                             </f:if>
                             <f:if condition="{package.rebatemt10}">
-                                bei mehr als 10 {package.rebatemt10}% Rabatt: {settings.currency} <arm:discount discount="{package.rebatemt10}" rate="{package.rate}" /><br>
+                                bei mehr als 10 Standorten {package.rebatemt10}% Rabatt: Euro <arm:discount discount="{package.rebatemt10}" rate="{package.rate}" /><br>
                             </f:if>
                         </div>
                     </div>
