--- a/typo3conf/ext/armpackage/Resources/Private/Templates/Email/PreStripe.html
+++ b/typo3conf/ext/armpackage/Resources/Private/Templates/Email/PreStripe.html
@@ -2,14 +2,9 @@
 <br>
 <p>
 Guten Tag {fname} {lname},<br><br>
-<f:if condition="{status}">
-<f:then>
-    Der Zahlungsvorgang mit Kreditkarte war erfolgreich.
-</f:then>
-<f:else>
-Der Zahlungsvorgang mit Kreditkarte war nicht erfolgreich.
-</f:else>
-</f:if>
+
+    Bestätigung: Ihre Anmeldung und Zahlung haben wir registriert, vielen Dank!<br>
+    Nach der Bestätigung der Zahlung durch unseren Payment Dienstleister werden Sie die Rechnung/Quittung per Email erhalten.
 <br>
 </p>
 
