--- a/typo3conf/ext/armpackage/Resources/Private/Templates/Package/Branch.html
+++ b/typo3conf/ext/armpackage/Resources/Private/Templates/Package/Branch.html
@@ -14,27 +14,15 @@
                         </div>
                     </div>
                     <div class="form-group row">
+                        <label class="col-sm-5 control-label"></label>
+                        <div class="controls col-sm-7">
+                            Benutzername unbekannt? Fragen Sie bitte bei Ihrem Unternehmen nach.
+                        </div>
+                    </div>
+                    <div class="form-group row">
                         <label class="col-sm-5 control-label">Unternehmen / Firma</label>
                         <div class="controls col-sm-7">
                             <f:form.textfield id="company" name="company" class="form-control" readonly="1" value="{company}" />
-                        </div>
-                    </div>
-                    <div class="form-group row">
-                        <label class="col-sm-5 control-label">Adresse *</label>
-                        <div class="controls col-sm-7">
-                            <f:form.textfield id="address" name="address" class="form-control" value="{address}" />
-                        </div>
-                    </div>
-                    <div class="form-group row">
-                        <label class="col-sm-5 control-label">Ort *</label>
-                        <div class="controls col-sm-7">
-                            <f:form.textfield id="city" name="city" class="form-control" value="{city}" />
-                        </div>
-                    </div>
-                    <div class="form-group row">
-                        <label class="col-sm-5 control-label">Postleitzahl *</label>
-                        <div class="controls col-sm-7">
-                            <f:form.textfield id="zip" name="zip" class="form-control" value="{zip}" />
                         </div>
                     </div>
                     <div class="form-group row">
