--- a/typo3conf/ext/armpackage/Resources/Private/Templates/Package/Register.html
+++ b/typo3conf/ext/armpackage/Resources/Private/Templates/Package/Register.html
@@ -2,10 +2,11 @@
 <div class="tx_armpackage">
     <div class="container">
         <div class="row">
-            <div class="col-sm-9 col-sm-offset-1 col-md-7 col-md-offset-2">
+            <div class="col-sm-10 col-sm-offset-1 col-md-8 col-md-offset-2">
                 <f:flashMessages />
                 <div id="buyprocess"></div>
                 <br>
+                <h4>Bestellung für {pack}-Abonnement</h4>
                 <f:form class="form-horizontal" action="confirm" method="post">
                     <div class="form-group row">
                         <label class="col-sm-5 control-label">Preis für Abonnement / <f:translate key="tx_armpackage_domain_model_package.month" /> Euro</label>
@@ -17,7 +18,7 @@
                         <label class="col-sm-5 control-label">Anzahl Standorte *</label>
                         <div class="controls col-sm-7">
                             <f:form.textfield type="number" id="packqty" name="qty" class="form-control" value="{qty}" />
-                            <div class="pknote">bitte geben Sie hier die Anzahl Verkaufs-standorte an, in denen Furnplan Installert ist.</div>
+                            <div class="pknote">Bitte geben Sie hier die Anzahl Verkaufsstellen an, in denen furnplan installiert ist.</div>
                         </div>
                     </div>
                      <div class="form-group row">
