--- a/typo3conf/ext/armpackage/Resources/Private/Partials/Package/Purchase.html
+++ b/typo3conf/ext/armpackage/Resources/Private/Partials/Package/Purchase.html
@@ -6,6 +6,7 @@
     <td>{reg.ptitle}</td>
     <td>{reg.currency} {reg.rate}</td>
     <td>{reg.qty}</td>
+    <td>{reg.noofpart}</td>
     <td><f:if condition="{reg.discount}>0">
         <f:then>
             {reg.currency} {reg.discount}
