--- a/typo3conf/ext/armpackage/Resources/Private/Templates/Email/PreStripe.html
+++ b/typo3conf/ext/armpackage/Resources/Private/Templates/Email/PreStripe.html
@@ -15,6 +15,7 @@ Datum: {pdate}<br>
 Zahlungsstatus: {pstatus}<br>
 Abonnement: {package}<br>
 Anzahl Verkaufshäuser: {qty}<br>
+Anzahl Seminar-Teilnehmer: {noofpart}<br>
 MwSt.: {vat}<br>
 Rabatt: {discount}<br>
 </p>
