--- a/typo3conf/ext/armpackage/Resources/Private/Templates/Package/Mypurchase.html
+++ b/typo3conf/ext/armpackage/Resources/Private/Templates/Package/Mypurchase.html
@@ -8,6 +8,7 @@
                     <th>Abonnement</th>
                     <th>Betrag</th>
                     <th>Anzahl Verkaufshäuser</th>
+                    <th>Anzahl Seminar-Teilnehmer</th>
                     <th>Rabatt</th>
                     <th>Total</th>
                     <th>Zahlungsstatus</th>
