[F] Register student emails

--- a/typo3conf/ext/armpackage/Resources/Private/Templates/Package/Login.html
+++ b/typo3conf/ext/armpackage/Resources/Private/Templates/Package/Login.html
@@ -19,6 +19,12 @@
                              <f:form.textfield id="company" name="company" class="form-control" readonly="1" placeholder="Unternehmen" />
                         </div>
                     </div>
+                    <div class="form-group">
+                        <div class="input-icon">
+                            <i class="icon fa fa-at"></i>
+                            <f:form.textfield id="studentemail" name="studentemail" class="form-control" placeholder="Persönliche E-Mail Adresse" />
+                        </div>
+                    </div>
                     <f:form.submit name="sub" class="btn btn-common log-btn" value="weiter" />
                     <f:form.hidden name="feuser" id="feuser" />
                 </f:form>
